# timeline-to-lightroom

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TimelineToLightroom.spec  pyproject.toml
.github/workflows/: build-release.yml
installer/: TimelineToLightroom.iss
src/: timeline_to_lightroom_launcher.py
src/timeline_to_lightroom/: __init__.py  app.py  core.py  exporters.py  map_widget.py  models.py  timezones.py
src/timeline_to_lightroom/assets/: map.html
tests/: test_assets.py  test_core.py  test_exporters.py  test_packaging.py
